# aiyer-object-viewer

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: factual-tests.yml  publish.yml
aiyer/adapters/: groq.py  ollama.py
aiyer/interfaces/: aiyer.py  models.py
aiyer/modules/: __init__.py  _utils.py  aiyer_lite.py  aiyer_medium.py  aiyer_zero.py
aiyer/providers/: __init__.py  _connectors.py
scripts/: run_factual_groq.sh  run_factual_ollama.sh
tests/: setup.py
tests/factual/: _common.py
tests/factual/groq/: test_chat.py  test_lite.py  test_medium.py  test_zero.py
tests/factual/ollama/: _common.py  test_context_chat.py  test_lite.py  test_medium.py  test_zero.py
